# theBranch

./: .contemporary.json  .gitignore  .parlance.json  CMakeLists.txt
application/: CMakeLists.txt  Info.plist.in  com.vicr123.thebranch.desktop  com.vicr123.thebranch_blueprint.desktop  landingpage.cpp  landingpage.h  landingpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  printcontroller.cpp  printcontroller.h  thebranch.conf
application/translations/: en_US.ts  ro_RO.ts  vi_VN.ts
application/translations/apple-lproj/en_US.lproj/: InfoPlist.strings
application/translations/apple-lproj/vi.lproj/: InfoPlist.strings
application/translations/desktop/com.vicr123.thebranch/: en.json  ro_RO.json  vi.json
application/translations/desktop/com.vicr123.thebranch_blueprint/: en.json  ro_RO.json  vi.json
libthebranch/: CMakeLists.txt  branchservices.cpp  branchservices.h  libthebranchConfig.cmake.in  libthebranch_global.cpp  libthebranch_global.h
libthebranch/accounts/: abstractaccount.cpp  abstractaccount.h  accountsmanager.cpp  accountsmanager.h
libthebranch/accounts/github/: addgithubaccountpopover.cpp  addgithubaccountpopover.h  addgithubaccountpopover.ui  githubaccount.cpp  githubaccount.h  githubasyncgeneratormodel.h  githubhttp.cpp  githubhttp.h  githubitem.cpp  githubitem.h  githubitemdatabase.cpp  githubitemdatabase.h
libthebranch/accounts/github/actions/: githubactionsapi.cpp  githubactionsapi.h  githubactionsbrowser.cpp  githubactionsbrowser.h  githubactionsbrowser.ui  githubactionslistcontroller.cpp  githubactionslistcontroller.h  githubactionsmodel.cpp  githubactionsmodel.h  githubactionsrunbrowser.cpp  githubactionsrunbrowser.h  githubactionsrunbrowser.ui  githubactionsrunsbrowser.cpp  githubactionsrunsbrowser.h  githubactionsrunsbrowser.ui  githubactionsworkflowbrowser.cpp  githubactionsworkflowbrowser.h  githubactionsworkflowbrowser.ui  githubworkflow.cpp  githubworkflow.h  githubworkflowjob.cpp  githubworkflowjob.h  githubworkflowjobbrowser.cpp  githubworkflowjobbrowser.h  githubworkflowjobbrowser.ui  githubworkflowjobmodel.cpp  githubworkflowjobmodel.h  githubworkflowmodel.cpp  githubworkflowmodel.h  githubworkflowrun.cpp  githubworkflowrun.h  githubworkflowrunmodel.cpp  githubworkflowrunmodel.h
libthebranch/accounts/github/issues/: githubissue.cpp  githubissue.h  githubissuebrowser.cpp  githubissuebrowser.h  githubissuebrowser.ui  githubissuecommentevent.cpp  githubissueevent.cpp  (+8 more)
libthebranch/commandpalettes/: branchescommandpalette.cpp  branchescommandpalette.h
libthebranch/cred/: gitcredentialmanager.cpp  gitcredentialmanager.h
libthebranch/objects/: blob.cpp  blob.h  branch.cpp  branch.h  branchmodel.cpp  branchmodel.h  branchuihelper.cpp  branchuihelper.h  cherrypick.cpp  cherrypick.h  commit.cpp  commit.h  commitmodel.cpp  commitmodel.h  diff.cpp  diff.h  errorresponse.cpp  errorresponse.h  forward_declares.h  gitoperation.cpp  gitoperation.h  icommitresolvable.h  index.cpp  index.h  indexmodel.cpp  indexmodel.h  merge.cpp  merge.h  rebase.cpp  rebase.h  reference.cpp  reference.h  remote.cpp  remote.h  remotesmodel.cpp  remotesmodel.h  repository.cpp  repository.h  repositorymodel.cpp  repositorymodel.h  (+14 more)
libthebranch/objects/libgit/: lgactiveremote.cpp  lgactiveremote.h  lgannotatedcommit.cpp  lgannotatedcommit.h  lgannotatedtag.cpp  lgannotatedtag.h  lgblob.cpp  lgblob.h  lgbranch.cpp  lgbranch.h  lgclone.cpp  lgclone.h  lgcommit.cpp  lgcommit.h  lgconfig.cpp  lgconfig.h  lgindex.cpp  lgindex.h  lglightweighttag.cpp  lglightweighttag.h  lgobject.cpp  lgobject.h  lgoid.cpp  lgoid.h  lgreference.cpp  lgreference.h  lgremote.cpp  lgremote.h  lgrepository.cpp  lgrepository.h  lgrevwalk.cpp  lgrevwalk.h  lgsignature.cpp  lgsignature.h  lgstash.cpp  lgstash.h  lgtag.cpp  lgtag.h  lgtree.cpp  lgtree.h
libthebranch/objects/private/: informationrequiredcallbackhelper.cpp  informationrequiredcallbackhelper.h  repositorycloneoperation.cpp  repositorycloneoperation.h  repositoryoperation.cpp  repositoryoperation.h
libthebranch/popovers/: clonerepositorypopover.cpp  clonerepositorypopover.h  clonerepositorypopover.ui  diffpopover.cpp  diffpopover.h  diffpopover.ui  newbranchpopover.cpp  newbranchpopover.h  newbranchpopover.ui  newremotepopover.cpp  newremotepopover.h  newremotepopover.ui  newtagpopover.cpp  newtagpopover.h  newtagpopover.ui  snapin.h  snapinpopover.cpp  snapinpopover.h  snapinpopover.ui
libthebranch/popovers/snapins/: branchactionsnapin.cpp  branchactionsnapin.h  branchactionsnapin.ui  checkoutsnapin.cpp  checkoutsnapin.h  checkoutsnapin.ui  cherrypicksnapin.cpp  cherrypicksnapin.h  cherrypicksnapin.ui  clonerepositorysnapin.cpp  clonerepositorysnapin.h  clonerepositorysnapin.ui  commitactionsnapin.cpp  commitactionsnapin.h  commitactionsnapin.ui  commitsnapin.cpp  commitsnapin.h  commitsnapin.ui  conflictresolutionsnapin.cpp  conflictresolutionsnapin.h  conflictresolutionsnapin.ui  informationrequestsnapin.cpp  informationrequestsnapin.h  mergesnapin.cpp  mergesnapin.h  mergesnapin.ui  newremotesnapin.cpp  newremotesnapin.h  newremotesnapin.ui  pullsnapin.cpp  pullsnapin.h  pullsnapin.ui  pushsnapin.cpp  pushsnapin.h  pushsnapin.ui  rebasesnapin.cpp  rebasesnapin.h  rebasesnapin.ui  revertsnapin.cpp  revertsnapin.h  (+15 more)
libthebranch/settingspanes/: accountspane.cpp  accountspane.h  accountspane.ui  commitspane.cpp  commitspane.h  commitspane.ui
libthebranch/translations/: cs.ts  en_US.ts  ro_RO.ts  vi_VN.ts
libthebranch/widgets/: branchbrowser.cpp  branchbrowser.h  commitbox.cpp  commitbox.h  commitbox.ui  commitbrowser.cpp  commitbrowser.h  commitbrowserwidget.cpp  commitbrowserwidget.h  commitbrowserwidget.ui  remotebrowser.cpp  remotebrowser.h  repositorybrowser.cpp  repositorybrowser.h  repositorybrowser.ui  repositorybrowserlist.cpp  repositorybrowserlist.h  repositorystatusbar.cpp  repositorystatusbar.h  repositorystatusbar.ui  stashbrowser.cpp  stashbrowser.h
libthebranch/widgets/conflictresolution/: conflictresolutionwidget.cpp  conflictresolutionwidget.h  textconflictresolution.cpp  textconflictresolution.h
(+19 files in other folders)
